# invasores

./: Anotacoes.txt  README.md  alienigena.py  fases.py  invasores.py  laser.py  naleatorios.py  nave.py  objeto_do_jogo.py  objetodojogo.py  objetos_bonus.py  objetosbonus.py  pyproject.toml  requirements.txt  score.py  setup.py  som.py  temporizador.py  temporizador_teste.py  traducao.py  universo.py  video.py
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  inimigos.rst  jogo.rst  nave.rst  objetos.rst  suporte.rst  universo.rst
lang/: en.lang  es.lang  fr.lang  pt_br.lang
